css won num bg <

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <body>
     <div id="block">
         <p class="welcome">Welcome To Tic Tac Toe</p>
-        <p class="game"><a href="{%url  'game'%}">Play Tic Tac Toe<</a> </p>
+        <p class="game"><a href="{%url  'game'%}">Play Tic Tac Toe</a> </p>
         <p class="game"><a href="{%url  'view'%}">View Player Scores</a> </p>
     </div>
 
